--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python = "^3.10"
 aiohttp = "^3.8.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+# pytest = "^5.2"
 isort = "^5.10.1"
 black = "^22.6.0"
 
